--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'io.netty', name: 'netty-all', version: '4.1.79.Final'
+	implementation 'com.google.code.gson:gson:2.9.1'
 }
 
 tasks.named('test') {
