refactor: 패키지 경로 수정 및 클라이언트 코드 리팩토링

--- a/build.gradle
+++ b/build.gradle
@@ -41,5 +41,5 @@ tasks.named('bootBuildImage') {
 }
 
 springBoot {
-	mainClass = "com.nettytransfile.TransFileServerApplication"
+	mainClass = "com.netty.transfile.TransFileServerApplication"
 }
