--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# client
+trans.client.file.path=/Users/maetdori/Desktop/meerkat.jpeg
+trans.client.file.name=meerkat.jpeg
+trans.client.file.dest=/home/service/file
 
 # server
 trans.server.charset=UTF-8
