refactor: client, server 분리

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -2,9 +2,5 @@
 trans.client.file.path=/Users/maetdori/Desktop/meerkat.jpeg
 trans.client.file.name=meerkat.jpeg
 trans.client.file.dest=/home/service/file
-
-# server
-trans.server.charset=UTF-8
-trans.server.boss.count=1
-trans.server.worker.count=8
+trans.client.charset=UTF-8
 trans.server.port=8081
